Fixed x-overflow on Clamscan Log tab
Also improved some comments in the clamav.yml file.

--- a/views/css/clamav.css
+++ b/views/css/clamav.css
@@ -118,6 +118,10 @@ div.infection_desc {
 	border-bottom: 1px dotted gray;
 }
 
+pre.log {
+    overflow-x: auto;
+}
+
 .log {
 	font: 12px "Courier New", Courier, mono;
 }
